include/libqgraphicsitem.h

typedef struct QGraphicsItem QGraphicsItem;
typedef struct QGraphicsPathItem QGraphicsPathItem;
typedef struct QGraphicsRectItem QGraphicsRectItem;
typedef struct QPainter QPainter;
typedef struct QPainterPath QPainterPath;
typedef struct QPointF QPointF;
typedef struct QRectF QRectF;
typedef struct QRegion QRegion;
typedef struct QSize QSize;
typedef struct QStyleOptionGraphicsItem QStyleOptionGraphicsItem;
typedef struct QTransform QTransform;
typedef struct QVariant QVariant;
typedef struct QWidget QWidget;
void QGraphicsItem_SetScale(QGraphicsItem* self, double scale);
double QGraphicsItem_Scale(const QGraphicsItem* self);
libqt_list /* of QGraphicsTransform* */ QGraphicsItem_Transformations(const QGraphicsItem* self);
void QGraphicsItem_SetTransformations(QGraphicsItem* self, libqt_list /* of QGraphicsTransform* */ transformations);
QPointF* QGraphicsItem_TransformOriginPoint(const QGraphicsItem* self);
void QGraphicsItem_SetTransformOriginPoint(QGraphicsItem* self, QPointF* origin);
void QGraphicsItem_SetTransformOriginPoint2(QGraphicsItem* self, double ax, double ay);
void QGraphicsItem_Advance(QGraphicsItem* self, int phase);
double QGraphicsItem_ZValue(const QGraphicsItem* self);
void QGraphicsItem_SetZValue(QGraphicsItem* self, double z);
void QGraphicsItem_StackBefore(QGraphicsItem* self, QGraphicsItem* sibling);
QRectF* QGraphicsItem_ChildrenBoundingRect(const QGraphicsItem* self);
QRectF* QGraphicsItem_SceneBoundingRect(const QGraphicsItem* self);
bool QGraphicsItem_IsClipped(const QGraphicsItem* self);
QPainterPath* QGraphicsItem_ClipPath(const QGraphicsItem* self);
bool QGraphicsItem_CollidesWithItem(const QGraphicsItem* self, QGraphicsItem* other, int mode);
bool QGraphicsItem_CollidesWithPath(const QGraphicsItem* self, QPainterPath* path, int mode);
libqt_list /* of QGraphicsItem* */ QGraphicsItem_CollidingItems(const QGraphicsItem* self);
bool QGraphicsItem_IsObscured(const QGraphicsItem* self);
bool QGraphicsItem_IsObscured2(const QGraphicsItem* self, double x, double y, double w, double h);
QRegion* QGraphicsItem_BoundingRegion(const QGraphicsItem* self, QTransform* itemToDeviceTransform);
double QGraphicsItem_BoundingRegionGranularity(const QGraphicsItem* self);
void QGraphicsItem_SetBoundingRegionGranularity(QGraphicsItem* self, double granularity);
void QGraphicsItem_Update(QGraphicsItem* self);
void QGraphicsItem_Update2(QGraphicsItem* self, double x, double y, double width, double height);
void QGraphicsItem_Scroll(QGraphicsItem* self, double dx, double dy);
QPointF* QGraphicsItem_MapToItem(const QGraphicsItem* self, QGraphicsItem* item, QPointF* point);
QPointF* QGraphicsItem_MapToParent(const QGraphicsItem* self, QPointF* point);
QPointF* QGraphicsItem_MapToScene(const QGraphicsItem* self, QPointF* point);
QRectF* QGraphicsItem_MapRectToItem(const QGraphicsItem* self, QGraphicsItem* item, QRectF* rect);
QRectF* QGraphicsItem_MapRectToParent(const QGraphicsItem* self, QRectF* rect);
QRectF* QGraphicsItem_MapRectToScene(const QGraphicsItem* self, QRectF* rect);
QPainterPath* QGraphicsItem_MapToItem4(const QGraphicsItem* self, QGraphicsItem* item, QPainterPath* path);
QPainterPath* QGraphicsItem_MapToParentWithPath(const QGraphicsItem* self, QPainterPath* path);
QPainterPath* QGraphicsItem_MapToSceneWithPath(const QGraphicsItem* self, QPainterPath* path);
QPointF* QGraphicsItem_MapFromItem(const QGraphicsItem* self, QGraphicsItem* item, QPointF* point);
QPointF* QGraphicsItem_MapFromParent(const QGraphicsItem* self, QPointF* point);
QPointF* QGraphicsItem_MapFromScene(const QGraphicsItem* self, QPointF* point);
QRectF* QGraphicsItem_MapRectFromItem(const QGraphicsItem* self, QGraphicsItem* item, QRectF* rect);
QRectF* QGraphicsItem_MapRectFromParent(const QGraphicsItem* self, QRectF* rect);
QRectF* QGraphicsItem_MapRectFromScene(const QGraphicsItem* self, QRectF* rect);
QPainterPath* QGraphicsItem_MapFromItem4(const QGraphicsItem* self, QGraphicsItem* item, QPainterPath* path);
QPainterPath* QGraphicsItem_MapFromParentWithPath(const QGraphicsItem* self, QPainterPath* path);
QPainterPath* QGraphicsItem_MapFromSceneWithPath(const QGraphicsItem* self, QPainterPath* path);
QPointF* QGraphicsItem_MapToItem5(const QGraphicsItem* self, QGraphicsItem* item, double x, double y);
QPointF* QGraphicsItem_MapToParent2(const QGraphicsItem* self, double x, double y);
QPointF* QGraphicsItem_MapToScene2(const QGraphicsItem* self, double x, double y);
QRectF* QGraphicsItem_MapRectToItem2(const QGraphicsItem* self, QGraphicsItem* item, double x, double y, double w, double h);
QRectF* QGraphicsItem_MapRectToParent2(const QGraphicsItem* self, double x, double y, double w, double h);
QRectF* QGraphicsItem_MapRectToScene2(const QGraphicsItem* self, double x, double y, double w, double h);
QPointF* QGraphicsItem_MapFromItem5(const QGraphicsItem* self, QGraphicsItem* item, double x, double y);
QPointF* QGraphicsItem_MapFromParent2(const QGraphicsItem* self, double x, double y);
QPointF* QGraphicsItem_MapFromScene2(const QGraphicsItem* self, double x, double y);
QRectF* QGraphicsItem_MapRectFromItem2(const QGraphicsItem* self, QGraphicsItem* item, double x, double y, double w, double h);
QRectF* QGraphicsItem_MapRectFromParent2(const QGraphicsItem* self, double x, double y, double w, double h);
QRectF* QGraphicsItem_MapRectFromScene2(const QGraphicsItem* self, double x, double y, double w, double h);
bool QGraphicsItem_IsAncestorOf(const QGraphicsItem* self, QGraphicsItem* child);
QGraphicsItem* QGraphicsItem_CommonAncestorItem(const QGraphicsItem* self, QGraphicsItem* other);
bool QGraphicsItem_IsUnderMouse(const QGraphicsItem* self);
QVariant* QGraphicsItem_Data(const QGraphicsItem* self, int key);
void QGraphicsItem_SetData(QGraphicsItem* self, int key, QVariant* value);
int QGraphicsItem_InputMethodHints(const QGraphicsItem* self);
void QGraphicsItem_SetInputMethodHints(QGraphicsItem* self, int hints);
void QGraphicsItem_InstallSceneEventFilter(QGraphicsItem* self, QGraphicsItem* filterItem);
void QGraphicsItem_RemoveSceneEventFilter(QGraphicsItem* self, QGraphicsItem* filterItem);
void QGraphicsItem_SetFlag2(QGraphicsItem* self, int flag, bool enabled);
void QGraphicsItem_SetCacheMode2(QGraphicsItem* self, int mode, QSize* cacheSize);
void QGraphicsItem_SetFocus1(QGraphicsItem* self, int focusReason);
void QGraphicsItem_EnsureVisible1(QGraphicsItem* self, QRectF* rect);
void QGraphicsItem_EnsureVisible22(QGraphicsItem* self, QRectF* rect, int xmargin);
void QGraphicsItem_EnsureVisible3(QGraphicsItem* self, QRectF* rect, int xmargin, int ymargin);
void QGraphicsItem_EnsureVisible5(QGraphicsItem* self, double x, double y, double w, double h, int xmargin);
void QGraphicsItem_EnsureVisible6(QGraphicsItem* self, double x, double y, double w, double h, int xmargin, int ymargin);
QTransform* QGraphicsItem_ItemTransform2(const QGraphicsItem* self, QGraphicsItem* other, bool* ok);
void QGraphicsItem_SetTransform2(QGraphicsItem* self, QTransform* matrix, bool combine);
libqt_list /* of QGraphicsItem* */ QGraphicsItem_CollidingItems1(const QGraphicsItem* self, int mode);
bool QGraphicsItem_IsObscured1(const QGraphicsItem* self, QRectF* rect);
void QGraphicsItem_Update1(QGraphicsItem* self, QRectF* rect);
void QGraphicsItem_Scroll3(QGraphicsItem* self, double dx, double dy, QRectF* rect);
QGraphicsPathItem* QGraphicsPathItem_new();
QGraphicsPathItem* QGraphicsPathItem_new2(QPainterPath* path);
QGraphicsPathItem* QGraphicsPathItem_new3(QGraphicsItem* parent);
QGraphicsPathItem* QGraphicsPathItem_new4(QPainterPath* path, QGraphicsItem* parent);
QPainterPath* QGraphicsPathItem_Path(const QGraphicsPathItem* self);
void QGraphicsPathItem_SetPath(QGraphicsPathItem* self, QPainterPath* path);
QRectF* QGraphicsPathItem_BoundingRect(const QGraphicsPathItem* self);
QPainterPath* QGraphicsPathItem_Shape(const QGraphicsPathItem* self);
bool QGraphicsPathItem_Contains(const QGraphicsPathItem* self, QPointF* point);
void QGraphicsPathItem_Paint(QGraphicsPathItem* self, QPainter* painter, QStyleOptionGraphicsItem* option, QWidget* widget);
bool QGraphicsPathItem_IsObscuredBy(const QGraphicsPathItem* self, QGraphicsItem* item);
QPainterPath* QGraphicsPathItem_OpaqueArea(const QGraphicsPathItem* self);
int QGraphicsPathItem_Type(const QGraphicsPathItem* self);
bool QGraphicsPathItem_SupportsExtension(const QGraphicsPathItem* self, int extension);
void QGraphicsPathItem_SetExtension(QGraphicsPathItem* self, int extension, QVariant* variant);
QVariant* QGraphicsPathItem_Extension(const QGraphicsPathItem* self, QVariant* variant);
void QGraphicsPathItem_Delete(QGraphicsPathItem* self);
QGraphicsRectItem* QGraphicsRectItem_new();
QRectF* QGraphicsRectItem_Rect(const QGraphicsRectItem* self);
void QGraphicsRectItem_SetRect(QGraphicsRectItem* self, QRectF* rect);
void QGraphicsRectItem_SetRect2(QGraphicsRectItem* self, double x, double y, double w, double h);
QRectF* QGraphicsRectItem_BoundingRect(const QGraphicsRectItem* self);
void QGraphicsRectItem_Delete(QGraphicsRectItem* self);