src/qt/libqgraphicsitem.bf

	
	public void SetScale(double scale)
	{
		CQt.QGraphicsItem_SetScale(this.nativePtr, scale);
	}
	
	public double Scale()
	{
		return CQt.QGraphicsItem_Scale(this.nativePtr);
	}
	
	public void*[] Transformations()
	{
		return CQt.QGraphicsItem_Transformations(this.nativePtr);
	}
	
	public void SetTransformations(void*[] transformations)
	{
		CQt.QGraphicsItem_SetTransformations(this.nativePtr, transformations);
	}
	
	public void TransformOriginPoint()
	{
		CQt.QGraphicsItem_TransformOriginPoint(this.nativePtr);
	}
	
	public void SetTransformOriginPoint(void* origin)
	{
		CQt.QGraphicsItem_SetTransformOriginPoint(this.nativePtr, origin);
	}
	
	public void SetTransformOriginPoint2(double ax, double ay)
	{
		CQt.QGraphicsItem_SetTransformOriginPoint2(this.nativePtr, ax, ay);
	}
	
	public virtual void Advance(int32 phase)
	{
		CQt.QGraphicsItem_Advance(this.nativePtr, phase);
	}
	
	public double ZValue()
	{
		return CQt.QGraphicsItem_ZValue(this.nativePtr);
	}
	
	public void SetZValue(double z)
	{
		CQt.QGraphicsItem_SetZValue(this.nativePtr, z);
	}
	
	public void StackBefore(void* sibling)
	{
		CQt.QGraphicsItem_StackBefore(this.nativePtr, sibling);
	}
	
	public void ChildrenBoundingRect()
	{
		CQt.QGraphicsItem_ChildrenBoundingRect(this.nativePtr);
	}
	
	public void SceneBoundingRect()
	{
		CQt.QGraphicsItem_SceneBoundingRect(this.nativePtr);
	}
	
	public bool IsClipped()
	{
		return CQt.QGraphicsItem_IsClipped(this.nativePtr);
	}
	
	public void ClipPath()
	{
		CQt.QGraphicsItem_ClipPath(this.nativePtr);
	}
	
	public virtual bool CollidesWithItem(void* other, int64 mode)
	{
		return CQt.QGraphicsItem_CollidesWithItem(this.nativePtr, other, mode);
	}
	
	public virtual bool CollidesWithPath(void* path, int64 mode)
	{
		return CQt.QGraphicsItem_CollidesWithPath(this.nativePtr, path, mode);
	}
	
	public void*[] CollidingItems()
	{
		return CQt.QGraphicsItem_CollidingItems(this.nativePtr);
	}
	
	public bool IsObscured()
	{
		return CQt.QGraphicsItem_IsObscured(this.nativePtr);
	}
	
	public bool IsObscured2(double x, double y, double w, double h)
	{
		return CQt.QGraphicsItem_IsObscured2(this.nativePtr, x, y, w, h);
	}
	
	public void BoundingRegion(void* itemToDeviceTransform)
	{
		CQt.QGraphicsItem_BoundingRegion(this.nativePtr, itemToDeviceTransform);
	}
	
	public double BoundingRegionGranularity()
	{
		return CQt.QGraphicsItem_BoundingRegionGranularity(this.nativePtr);
	}
	
	public void SetBoundingRegionGranularity(double granularity)
	{
		CQt.QGraphicsItem_SetBoundingRegionGranularity(this.nativePtr, granularity);
	}
	
	public void Update()
	{
		CQt.QGraphicsItem_Update(this.nativePtr);
	}
	
	public void Update2(double x, double y, double width, double height)
	{
		CQt.QGraphicsItem_Update2(this.nativePtr, x, y, width, height);
	}
	
	public void Scroll(double dx, double dy)
	{
		CQt.QGraphicsItem_Scroll(this.nativePtr, dx, dy);
	}
	
	public void MapToItem(void* item, void* point)
	{
		CQt.QGraphicsItem_MapToItem(this.nativePtr, item, point);
	}
	
	public void MapToParent(void* point)
	{
		CQt.QGraphicsItem_MapToParent(this.nativePtr, point);
	}
	
	public void MapToScene(void* point)
	{
		CQt.QGraphicsItem_MapToScene(this.nativePtr, point);
	}
	
	public void MapRectToItem(void* item, void* rect)
	{
		CQt.QGraphicsItem_MapRectToItem(this.nativePtr, item, rect);
	}
	
	public void MapRectToParent(void* rect)
	{
		CQt.QGraphicsItem_MapRectToParent(this.nativePtr, rect);
	}
	
	public void MapRectToScene(void* rect)
	{
		CQt.QGraphicsItem_MapRectToScene(this.nativePtr, rect);
	}
	
	public void MapToItem4(void* item, void* path)
	{
		CQt.QGraphicsItem_MapToItem4(this.nativePtr, item, path);
	}
	
	public void MapToParentWithPath(void* path)
	{
		CQt.QGraphicsItem_MapToParentWithPath(this.nativePtr, path);
	}
	
	public void MapToSceneWithPath(void* path)
	{
		CQt.QGraphicsItem_MapToSceneWithPath(this.nativePtr, path);
	}
	
	public void MapFromItem(void* item, void* point)
	{
		CQt.QGraphicsItem_MapFromItem(this.nativePtr, item, point);
	}
	
	public void MapFromParent(void* point)
	{
		CQt.QGraphicsItem_MapFromParent(this.nativePtr, point);
	}
	
	public void MapFromScene(void* point)
	{
		CQt.QGraphicsItem_MapFromScene(this.nativePtr, point);
	}
	
	public void MapRectFromItem(void* item, void* rect)
	{
		CQt.QGraphicsItem_MapRectFromItem(this.nativePtr, item, rect);
	}
	
	public void MapRectFromParent(void* rect)
	{
		CQt.QGraphicsItem_MapRectFromParent(this.nativePtr, rect);
	}
	
	public void MapRectFromScene(void* rect)
	{
		CQt.QGraphicsItem_MapRectFromScene(this.nativePtr, rect);
	}
	
	public void MapFromItem4(void* item, void* path)
	{
		CQt.QGraphicsItem_MapFromItem4(this.nativePtr, item, path);
	}
	
	public void MapFromParentWithPath(void* path)
	{
		CQt.QGraphicsItem_MapFromParentWithPath(this.nativePtr, path);
	}
	
	public void MapFromSceneWithPath(void* path)
	{
		CQt.QGraphicsItem_MapFromSceneWithPath(this.nativePtr, path);
	}
	
	public void MapToItem5(void* item, double x, double y)
	{
		CQt.QGraphicsItem_MapToItem5(this.nativePtr, item, x, y);
	}
	
	public void MapToParent2(double x, double y)
	{
		CQt.QGraphicsItem_MapToParent2(this.nativePtr, x, y);
	}
	
	public void MapToScene2(double x, double y)
	{
		CQt.QGraphicsItem_MapToScene2(this.nativePtr, x, y);
	}
	
	public void MapRectToItem2(void* item, double x, double y, double w, double h)
	{
		CQt.QGraphicsItem_MapRectToItem2(this.nativePtr, item, x, y, w, h);
	}
	
	public void MapRectToParent2(double x, double y, double w, double h)
	{
		CQt.QGraphicsItem_MapRectToParent2(this.nativePtr, x, y, w, h);
	}
	
	public void MapRectToScene2(double x, double y, double w, double h)
	{
		CQt.QGraphicsItem_MapRectToScene2(this.nativePtr, x, y, w, h);
	}
	
	public void MapFromItem5(void* item, double x, double y)
	{
		CQt.QGraphicsItem_MapFromItem5(this.nativePtr, item, x, y);
	}
	
	public void MapFromParent2(double x, double y)
	{
		CQt.QGraphicsItem_MapFromParent2(this.nativePtr, x, y);
	}
	
	public void MapFromScene2(double x, double y)
	{
		CQt.QGraphicsItem_MapFromScene2(this.nativePtr, x, y);
	}
	
	public void MapRectFromItem2(void* item, double x, double y, double w, double h)
	{
		CQt.QGraphicsItem_MapRectFromItem2(this.nativePtr, item, x, y, w, h);
	}
	
	public void MapRectFromParent2(double x, double y, double w, double h)
	{
		CQt.QGraphicsItem_MapRectFromParent2(this.nativePtr, x, y, w, h);
	}
	
	public void MapRectFromScene2(double x, double y, double w, double h)
	{
		CQt.QGraphicsItem_MapRectFromScene2(this.nativePtr, x, y, w, h);
	}
	
	public bool IsAncestorOf(void* child)
	{
		return CQt.QGraphicsItem_IsAncestorOf(this.nativePtr, child);
	}
	
	public void* CommonAncestorItem(void* other)
	{
		return CQt.QGraphicsItem_CommonAncestorItem(this.nativePtr, other);
	}
	
	public bool IsUnderMouse()
	{
		return CQt.QGraphicsItem_IsUnderMouse(this.nativePtr);
	}
	
	public void Data(int32 key)
	{
		CQt.QGraphicsItem_Data(this.nativePtr, key);
	}
	
	public void SetData(int32 key, void* value)
	{
		CQt.QGraphicsItem_SetData(this.nativePtr, key, value);
	}
	
	public int64 InputMethodHints()
	{
		return CQt.QGraphicsItem_InputMethodHints(this.nativePtr);
	}
	
	public void SetInputMethodHints(int64 hints)
	{
		CQt.QGraphicsItem_SetInputMethodHints(this.nativePtr, hints);
	}
	
	public void InstallSceneEventFilter(void* filterItem)
	{
		CQt.QGraphicsItem_InstallSceneEventFilter(this.nativePtr, filterItem);
	}
	
	public void RemoveSceneEventFilter(void* filterItem)
	{
		CQt.QGraphicsItem_RemoveSceneEventFilter(this.nativePtr, filterItem);
	}
	
	public void SetFlag2(int64 flag, bool enabled)
	{
		CQt.QGraphicsItem_SetFlag2(this.nativePtr, flag, enabled);
	}
	
	public void SetCacheMode2(int64 mode, void* cacheSize)
	{
		CQt.QGraphicsItem_SetCacheMode2(this.nativePtr, mode, cacheSize);
	}
	
	public void SetFocus1(int64 focusReason)
	{
		CQt.QGraphicsItem_SetFocus1(this.nativePtr, focusReason);
	}
	
	public void EnsureVisible1(void* rect)
	{
		CQt.QGraphicsItem_EnsureVisible1(this.nativePtr, rect);
	}
	
	public void EnsureVisible22(void* rect, int32 xmargin)
	{
		CQt.QGraphicsItem_EnsureVisible22(this.nativePtr, rect, xmargin);
	}
	
	public void EnsureVisible3(void* rect, int32 xmargin, int32 ymargin)
	{
		CQt.QGraphicsItem_EnsureVisible3(this.nativePtr, rect, xmargin, ymargin);
	}
	
	public void EnsureVisible5(double x, double y, double w, double h, int32 xmargin)
	{
		CQt.QGraphicsItem_EnsureVisible5(this.nativePtr, x, y, w, h, xmargin);
	}
	
	public void EnsureVisible6(double x, double y, double w, double h, int32 xmargin, int32 ymargin)
	{
		CQt.QGraphicsItem_EnsureVisible6(this.nativePtr, x, y, w, h, xmargin, ymargin);
	}
	
	public void ItemTransform2(void* other, bool* ok)
	{
		CQt.QGraphicsItem_ItemTransform2(this.nativePtr, other, ok);
	}
	
	public void SetTransform2(void* matrix, bool combine)
	{
		CQt.QGraphicsItem_SetTransform2(this.nativePtr, matrix, combine);
	}
	
	public void*[] CollidingItems1(int64 mode)
	{
		return CQt.QGraphicsItem_CollidingItems1(this.nativePtr, mode);
	}
	
	public bool IsObscured1(void* rect)
	{
		return CQt.QGraphicsItem_IsObscured1(this.nativePtr, rect);
	}
	
	public void Update1(void* rect)
	{
		CQt.QGraphicsItem_Update1(this.nativePtr, rect);
	}
	
	public void Scroll3(double dx, double dy, void* rect)
	{
		CQt.QGraphicsItem_Scroll3(this.nativePtr, dx, dy, rect);
	}
	
}
extension CQt
{
	[LinkName("QGraphicsPathItem_new")]
	public static extern void* QGraphicsPathItem_new();
	[LinkName("QGraphicsPathItem_new2")]
	public static extern void* QGraphicsPathItem_new2(void* path);
	[LinkName("QGraphicsPathItem_new3")]
	public static extern void* QGraphicsPathItem_new3(void* parent);
	[LinkName("QGraphicsPathItem_new4")]
	public static extern void* QGraphicsPathItem_new4(void* path, void* parent);
	[LinkName("QGraphicsPathItem_Path")]
	public static extern void QGraphicsPathItem_Path(void* c_this);
	[LinkName("QGraphicsPathItem_SetPath")]
	public static extern void QGraphicsPathItem_SetPath(void* c_this, void* path);
	[LinkName("QGraphicsPathItem_BoundingRect")]
	public static extern void QGraphicsPathItem_BoundingRect(void* c_this);
	[LinkName("QGraphicsPathItem_Shape")]
	public static extern void QGraphicsPathItem_Shape(void* c_this);
	[LinkName("QGraphicsPathItem_Contains")]
	public static extern bool QGraphicsPathItem_Contains(void* c_this, void* point);
	[LinkName("QGraphicsPathItem_Paint")]
	public static extern void QGraphicsPathItem_Paint(void* c_this, void* painter, void* option, void* widget);
	[LinkName("QGraphicsPathItem_IsObscuredBy")]
	public static extern bool QGraphicsPathItem_IsObscuredBy(void* c_this, void* item);
	[LinkName("QGraphicsPathItem_OpaqueArea")]
	public static extern void QGraphicsPathItem_OpaqueArea(void* c_this);
	[LinkName("QGraphicsPathItem_Type")]
	public static extern int32 QGraphicsPathItem_Type(void* c_this);
	[LinkName("QGraphicsPathItem_SupportsExtension")]
	public static extern bool QGraphicsPathItem_SupportsExtension(void* c_this, int64 _extension);
	[LinkName("QGraphicsPathItem_SetExtension")]
	public static extern void QGraphicsPathItem_SetExtension(void* c_this, int64 _extension, void* variant);
	[LinkName("QGraphicsPathItem_Extension")]
	public static extern void QGraphicsPathItem_Extension(void* c_this, void* variant);
	/// Delete this object from C++ memory
	[LinkName("QGraphicsPathItem_Delete")]
	public static extern void QGraphicsPathItem_Delete(void* self);
}
public class QGraphicsRectItem
{
	protected void* nativePtr;
	
	public this()
	{
		this.nativePtr = CQt.QGraphicsRectItem_new();
	}
	
	public ~this()
	{
		CQt.QGraphicsRectItem_Delete(this.nativePtr);
	}
	
	public void Rect()
	{
		CQt.QGraphicsRectItem_Rect(this.nativePtr);
	}
	
	public void SetRect(void* rect)
	{
		CQt.QGraphicsRectItem_SetRect(this.nativePtr, rect);
	}
	
	public void SetRect2(double x, double y, double w, double h)
	{
		CQt.QGraphicsRectItem_SetRect2(this.nativePtr, x, y, w, h);
	}
	
	public virtual void BoundingRect()
	{
		CQt.QGraphicsRectItem_BoundingRect(this.nativePtr);
	}
